--- a/index.html
+++ b/index.html
@@ -137,11 +137,6 @@ The actual DBMS usually doesn't know or care what you store in it, so of course 
 
 ---
 
-## Key-Value Stores at Scale
-
-.footnote.citation[(DeCandia et. al. 2007)]
-
----
 class: center, middle, inverse
 
 ## Document-Oriented Databases
@@ -263,7 +258,7 @@ This is a document that you might find in a document database storing the same d
 
 If you were editing this in some sort of generic UI for your DBMS, it'd be quite obvious what's going on, and quite easy to update. In contrast, if you edited the relational version in something like PhpMyAdmin, you'd be editing two different tables, and the data you care about is mixed in with data about other invoices.
 
-It's also simpler to develop for; 
+It also means that when you're developing for it, you don't have to mess around with joins; you can just pull this structure out of the database, modify it, put it back.
 
 ---
 
@@ -827,18 +822,6 @@ Proposed 'schema':
 - The Yu et al paper suggests future multi-sensor platforms for things like environmental monitoring.
 - Yu et al envision this sort of implementation collecting data over time that scales up to potential exabytes.
 - Since Bigtable has implicit versioning, this could be used easily to build up a picture over time.
----
-# Bibliography
-
-TODO: EXPORT BIBLIOGRAPHY FROM ZOTERO
-
-???
-
-This is our bibliography.
-
-If you'd like to know more about document-oriented databases, *CouchDB: The Definitive Guide* by Chris Anderson is an excellent resource; it includes examples of building a real-world blog engine using nothing but CouchDB.
-
-Camlistore is also a really interesting project that's worth checking out. They're basically trying to create this sort of personal content management system to end all content management systems, something that can store and sync files, blog posts, pictures, whatever, in such a way that the user is in control.
 
 ---
 class: center, middle, inverse
@@ -846,7 +829,9 @@ class: center, middle, inverse
 # Thank You
 
 Adam Brenecki, Adrian Colbert  
-adambrenecki.github.io/non-relational-databases
+adambrenecki.github.io/non-relational-databases  
+
+**Bibliography:** adambrenecki.github.io/non-relational-databases/bibliography
 
 <a href='https://github.com/adambrenecki/non-relational-databases/archive/master.zip' class='dl-link'>download slides</a>
 
